# pad

./: .gitignore  Cargo.toml  README.md
src/: bevy_vec.rs  board.rs  bounds.rs  direction.rs  lib.rs  position.rs  position_iter.rs  position_printer.rs  shape.rs
src/board/: line.rs  mod.rs  parse.rs  print.rs
