[package]
name = "pad"
version = "0.1.0"
edition = "2021"

[features]
serde = ["dep:serde"]
bevy = ["dep:bevy_reflect", "dep:bevy_math"]
board_shape_macro = ["dep:indoc"]

[dependencies]
bevy_reflect = { version = "0.15.0", optional = true}
bevy_math = { version = "0.15.0", optional = true }
serde = { version = "1.0.159", features = ["derive"], optional = true }
indoc = { version = "2.0.5", optional = true }